--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xaiah",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/jhun0601/xaiah/issues"
   },
-  "homepage": "https://github.com/jhun0601/xaiah#readme"
+  "homepage": "https://github.com/jhun0601/xaiah#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.12.14"
+  }
 }
