--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "start-server": "nodemon server.js"
+    "start-server": "nodemon server.js",
+    "start-client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,7 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
+    "concurrently": "^6.2.0",
     "morgan": "^1.10.0"
   }
 }
